crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@351.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select arrayrange(ARRAY[1,2], ARRAY[2,1]);"
---
SelectStmt@0..42
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..39
    FuncCall@7..39
      Ident@7..17 "arrayrange"
      Ascii40@17..18 "("
      AArrayExpr@18..27
        Array@18..23 "ARRAY"
        Ascii91@23..24 "["
        AConst@24..25
          Iconst@24..25 "1"
        Ascii44@25..26 ","
        AConst@26..27
          Iconst@26..27 "2"
      Ascii93@27..28 "]"
      Ascii44@28..29 ","
      Whitespace@29..30 " "
      AArrayExpr@30..39
        Array@30..35 "ARRAY"
        Ascii91@35..36 "["
        AConst@36..37
          Iconst@36..37 "2"
        Ascii44@37..38 ","
        AConst@38..39
          Iconst@38..39 "1"
  Ascii93@39..40 "]"
  Ascii41@40..41 ")"
  Ascii59@41..42 ";"

