crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@354.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select array[1,3] <@ arrayrange(array[1,2], array[2,1]);"
---
SelectStmt@0..56
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..53
    AExpr@7..53
      AArrayExpr@7..16
        Array@7..12 "array"
        Ascii91@12..13 "["
        AConst@13..14
          Iconst@13..14 "1"
        Ascii44@14..15 ","
        AConst@15..16
          Iconst@15..16 "3"
      Ascii93@16..17 "]"
      Whitespace@17..18 " "
      Op@18..20 "<@"
      Whitespace@20..21 " "
      FuncCall@21..53
        Ident@21..31 "arrayrange"
        Ascii40@31..32 "("
        AArrayExpr@32..41
          Array@32..37 "array"
          Ascii91@37..38 "["
          AConst@38..39
            Iconst@38..39 "1"
          Ascii44@39..40 ","
          AConst@40..41
            Iconst@40..41 "2"
        Ascii93@41..42 "]"
        Ascii44@42..43 ","
        Whitespace@43..44 " "
        AArrayExpr@44..53
          Array@44..49 "array"
          Ascii91@49..50 "["
          AConst@50..51
            Iconst@50..51 "2"
          Ascii44@51..52 ","
          AConst@52..53
            Iconst@52..53 "1"
  Ascii93@53..54 "]"
  Ascii41@54..55 ")"
  Ascii59@55..56 ";"

