crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@36.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO numrange_test VALUES(numrange(1.1, 2.2));"
---
InsertStmt@0..53
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..25
    Ident@12..25 "numrange_test"
  Whitespace@25..26 " "
  SelectStmt@26..50
    Values@26..32 "VALUES"
    Ascii40@32..33 "("
    List@33..50
      FuncCall@33..50
        Ident@33..41 "numrange"
        Ascii40@41..42 "("
        AConst@42..45
          Fconst@42..45 "1.1"
        Ascii44@45..46 ","
        Whitespace@46..47 " "
        AConst@47..50
          Fconst@47..50 "2.2"
  Ascii41@50..51 ")"
  Ascii41@51..52 ")"
  Ascii59@52..53 ";"

