crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@369.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from outparam_succeed2(int4range(int4range(1,2)));"
---
SelectStmt@0..59
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..55
    List@14..55
      FuncCall@14..55
        Ident@14..31 "outparam_succeed2"
        Ascii40@31..32 "("
        FuncCall@32..55
          Ident@32..41 "int4range"
          Ascii40@41..42 "("
          FuncCall@42..55
            Ident@42..51 "int4range"
            Ascii40@51..52 "("
            AConst@52..53
              Iconst@52..53 "1"
            Ascii44@53..54 ","
            AConst@54..55
              Iconst@54..55 "2"
  Ascii41@55..56 ")"
  Ascii41@56..57 ")"
  Ascii41@57..58 ")"
  Ascii59@58..59 ";"

