crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@371.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from inoutparam_succeed(int4range(1,2));"
---
SelectStmt@0..49
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..46
    List@14..46
      FuncCall@14..46
        Ident@14..32 "inoutparam_succeed"
        Ascii40@32..33 "("
        FuncCall@33..46
          Ident@33..42 "int4range"
          Ascii40@42..43 "("
          AConst@43..44
            Iconst@43..44 "1"
          Ascii44@44..45 ","
          AConst@45..46
            Iconst@45..46 "2"
  Ascii41@46..47 ")"
  Ascii41@47..48 ")"
  Ascii59@48..49 ";"

